Physics optimized even further. It seems rendering was the bottleneck, not physics. Static geometry is now merged. Future further optimizations may include finally using the pooling system, having less / merging materials

--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -168,6 +168,7 @@
     <Content Include="Scripts\implementations\stats.min.js" />
     <Content Include="Scripts\implementations\subtitles.js" />
     <Content Include="Scripts\implementations\polyfills.js" />
+    <Content Include="Scripts\implementations\three.js" />
     <Content Include="thralldom.js">
       <DependentUpon>thralldom.js.bundle</DependentUpon>
     </Content>
@@ -177,6 +178,7 @@
     <Content Include="Scripts\implementations\three.min.js" />
     <Content Include="Scripts\implementations\Three.Plugins\THREE.AudioObject.js" />
     <TypeScriptCompile Include="Code\AI\Statue.ts" />
+    <TypeScriptCompile Include="Code\Managers\PhysicsManager.ts" />
     <TypeScriptCompile Include="Code\Physics\SharedInterfaces.ts" />
     <TypeScriptCompile Include="Code\Managers\CombatManager.ts" />
     <TypeScriptCompile Include="Code\Managers\UIManager.ts" />
