--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -146,15 +146,21 @@
     <Content Include="Docs\Presentation\images\skyrim.jpg" />
     <Content Include="Docs\Presentation\images\sr4.png" />
     <Content Include="Docs\Presentation\images\thepeople.png" />
-    <Content Include="Docs\Project Proposal\images\thepeople.png" />
+    <Content Include="Docs\ProjectProposal\css\screen.css" />
+    <Content Include="Docs\ProjectProposal\images\byala-cherkva-large.png" />
+    <Content Include="Docs\ProjectProposal\images\byala-cherkva.png" />
+    <Content Include="Docs\ProjectProposal\images\kralicha-large.png" />
+    <Content Include="Docs\ProjectProposal\images\kralicha.png" />
+    <Content Include="Docs\ProjectProposal\images\thepeople.png" />
     <Content Include="Docs\Presentation\images\under-yoke.png" />
     <Content Include="Docs\Presentation\images\vs.png" />
     <Content Include="Docs\Presentation\index.html" />
     <Content Include="Docs\Presentation\js\impress.js" />
-    <Content Include="Docs\Project Proposal\ProposalText.html">
+    <Content Include="Docs\ProjectProposal\index.html" />
+    <Content Include="Docs\ProjectProposal\ProposalText.html">
       <DependentUpon>ProposalText.md</DependentUpon>
     </Content>
-    <Content Include="Docs\Project Proposal\ProposalText.min.html">
+    <Content Include="Docs\ProjectProposal\ProposalText.min.html">
       <DependentUpon>ProposalText.html</DependentUpon>
     </Content>
     <Content Include="Images\blank.cur" />
@@ -187,7 +193,11 @@
     <Content Include="Scripts\implementations\three.min.js" />
     <Content Include="Scripts\implementations\Three.Plugins\THREE.AudioObject.js" />
     <TypeScriptCompile Include="Code\AI\Statue.ts" />
-    <TypeScriptCompile Include="Code\CharacterControllers\FreeRoamCharacterController.ts" />
+    <TypeScriptCompile Include="Code\CameraControllers\FreeRoamCameraController.ts" />
+    <TypeScriptCompile Include="Code\CameraControllers\ICameraController.ts" />
+    <TypeScriptCompile Include="Code\CameraControllers\SkyrimCameraController.ts" />
+    <TypeScriptCompile Include="Code\CommonInterfaces.ts" />
+    <TypeScriptCompile Include="Code\IController.ts" />
     <TypeScriptCompile Include="Code\Managers\PhysicsManager.ts" />
     <TypeScriptCompile Include="Code\Overlay2D\Particle2D.ts" />
     <TypeScriptCompile Include="Code\Overlay2D\ParticleEngine2D.ts" />
@@ -217,9 +227,12 @@
     <Content Include="Content\Subtitles\boycho-sokolov.srt" />
     <Content Include="Content\Models\Heroes\Sokolov\SokolovAnimation.anim" />
     <Content Include="Content\Subtitles\sokolov-boycho.srt" />
-    <Content Include="Docs\Project Proposal\ProposalText.md" />
+    <Content Include="Docs\ProjectProposal\ProposalText.md" />
     <Content Include="Content\ScriptedEvents\Intro.tscr" />
-    <None Include="thralldom.js.bundle" />
+    <Content Include="Docs\ProjectProposal\css\Bulgaria_Moderna_Pro.otf" />
+    <None Include="thralldom.js.bundle">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="thralldom.min.js.map">
       <DependentUpon>thralldom.min.js</DependentUpon>
     </Content>
@@ -242,7 +255,7 @@
     <TypeScriptCompile Include="Code\CharacterControllers\SkyrimCharacterController.ts" />
     <TypeScriptCompile Include="Code\Constants.ts" />
     <TypeScriptCompile Include="Code\FrameInfo.ts" />
-    <TypeScriptCompile Include="Code\Managers\AIManager.ts" />
+    <TypeScriptCompile Include="Code\Managers\ControllerManager.ts" />
     <TypeScriptCompile Include="Code\Managers\AudioManager.ts" />
     <TypeScriptCompile Include="Code\Objectives.ts" />
     <TypeScriptCompile Include="Code\Quest.ts" />
