--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -9,7 +9,7 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
-    <TypeScriptToolsVersion>0.9</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>1.0</TypeScriptToolsVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -109,6 +109,15 @@
     <Content Include="Content\Sounds\forest_background.mp3" />
     <Content Include="Content\Sounds\gunshot.mp3" />
     <Content Include="Content\Sounds\heavy_song.mp3" />
+    <Content Include="Content\Textures\Particles\raindrop.png" />
+    <Content Include="Content\Textures\Particles\raindrop2.png" />
+    <Content Include="Content\Textures\Particles\raindrop2flip.png" />
+    <Content Include="Content\Textures\Particles\raindropflip.png" />
+    <Content Include="Content\Textures\Particles\smokeparticle.png" />
+    <Content Include="Content\Textures\Particles\snowflake.png" />
+    <Content Include="Content\Textures\Particles\spark.png" />
+    <Content Include="Content\Textures\Particles\spikey.png" />
+    <Content Include="Content\Textures\Particles\star.png" />
     <Content Include="Docs\info.txt" />
     <Content Include="Content\Sounds\running.mp3" />
     <Content Include="Content\Textures\BlackWhiteChecker.jpg" />
@@ -198,6 +207,7 @@
     <TypeScriptCompile Include="Code\CameraControllers\SkyrimCameraController.ts" />
     <TypeScriptCompile Include="Code\CommonInterfaces.ts" />
     <TypeScriptCompile Include="Code\IController.ts" />
+    <TypeScriptCompile Include="Code\Managers\ParticleManager.ts" />
     <TypeScriptCompile Include="Code\Managers\PhysicsManager.ts" />
     <TypeScriptCompile Include="Code\Overlay2D\Particle2D.ts" />
     <TypeScriptCompile Include="Code\Overlay2D\ParticleEngine2D.ts" />
@@ -230,6 +240,7 @@
     <Content Include="Docs\ProjectProposal\ProposalText.md" />
     <Content Include="Content\ScriptedEvents\Intro.tscr" />
     <Content Include="Docs\ProjectProposal\css\Bulgaria_Moderna_Pro.otf" />
+    <Content Include="Scripts\implementations\Three.Plugins\THREE.ParticleEngine.js" />
     <None Include="thralldom.js.bundle">
       <SubType>Designer</SubType>
     </None>
@@ -297,6 +308,7 @@
     <TypeScriptCompile Include="Scripts\typings\qunit.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\stats.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\three.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\Three.Plugins\THREE.ParticleEngine.d.ts" />
     <TypeScriptCompile Include="Tests\Tests.ts" />
   </ItemGroup>
   <ItemGroup />
