Seminfinal release. Azure connection. First mission

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ TestResults
 ## Javascript and javascript maps are usually not needed
 *.js
 *.js.map
+*.gzip
+*.zip
 
 
 # Content & JS implementations
