--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -204,6 +204,7 @@
     <Content Include="Scripts\implementations\ammo.js" />
     <Content Include="Scripts\implementations\ammo.small.js" />
     <Content Include="Scripts\implementations\jquery.documentReady.js" />
+    <Content Include="Scripts\implementations\knockout-3.1.0.js" />
     <Content Include="Scripts\implementations\MobileServices.Web-1.1.3.min.js" />
     <Content Include="Scripts\implementations\stats.min.js" />
     <Content Include="Scripts\implementations\subtitles.js" />
@@ -227,6 +228,7 @@
     <TypeScriptCompile Include="Code\IController.ts" />
     <TypeScriptCompile Include="Code\Managers\ParticleManager.ts" />
     <TypeScriptCompile Include="Code\Managers\PhysicsManager.ts" />
+    <TypeScriptCompile Include="Code\Managers\Viewmodel.ts" />
     <TypeScriptCompile Include="Code\Overlay2D\Particle2D.ts" />
     <TypeScriptCompile Include="Code\Overlay2D\ParticleEngine2D.ts" />
     <TypeScriptCompile Include="Code\Overlay2D\Storyteller.ts" />
@@ -237,6 +239,7 @@
     <TypeScriptCompile Include="Code\Physics\Worker.ts" />
     <TypeScriptCompile Include="Code\Pool.ts" />
     <TypeScriptCompile Include="Scripts\typings\azure.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\knockout.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\subtitles.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\Three.Plugins\THREE.AudioObject.d.ts" />
     <Content Include="Tests\TestingPage.html" />
@@ -323,7 +326,7 @@
     <TypeScriptCompile Include="Code\StateMachine\StateMachineUtils.ts" />
     <TypeScriptCompile Include="Code\StringExtenstions.d.ts" />
     <TypeScriptCompile Include="Code\Scene\Terrain.ts" />
-    <TypeScriptCompile Include="Code\Utilities.ts" />
+    <TypeScriptCompile Include="Code\Utils.ts" />
     <TypeScriptCompile Include="Scripts\typings\ammo.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\jquery.documentReady.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\qunit.d.ts" />
