--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -238,6 +238,7 @@
     <TypeScriptCompile Include="Code\Physics\PhysicsManagerWorker.ts" />
     <TypeScriptCompile Include="Code\Physics\Worker.ts" />
     <TypeScriptCompile Include="Code\Pool.ts" />
+    <TypeScriptCompile Include="Code\Scene\Interfaces.ts" />
     <TypeScriptCompile Include="Scripts\typings\azure.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\knockout.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\subtitles.d.ts" />
@@ -304,9 +305,6 @@
     <TypeScriptCompile Include="Code\LanguagePacks\English.ts" />
     <TypeScriptCompile Include="Code\LanguagePacks\ILanguagePack.ts" />
     <TypeScriptCompile Include="Code\Scene\Environment.ts" />
-    <TypeScriptCompile Include="Code\Scene\IDrawable.ts" />
-    <TypeScriptCompile Include="Code\Scene\ILoadable.ts" />
-    <TypeScriptCompile Include="Code\Scene\ISelectableObject.ts" />
     <TypeScriptCompile Include="Code\Scene\LaserOfDeath.ts" />
     <TypeScriptCompile Include="Code\Main.ts" />
     <TypeScriptCompile Include="Code\Managers\ContentManager.ts" />
